--- a/css_pages/style_index.css
+++ b/css_pages/style_index.css
@@ -111,3 +111,35 @@ html, body {
     height: 60%;
     width: 50%;
   }
+
+  .uppa {
+    font-family: 'Futura PT', sans-serif;
+    color: white;
+    font-size: 70px;
+    font-weight: bold;
+    letter-spacing: 4px;
+  }
+
+  .myButton {
+    background:linear-gradient(to bottom, #ffffff 5%, #ffffff 100%);
+    background-color:#ffffff;
+    border-radius:1px;
+    border:1px solid #ffffff;
+    display:inline-block;
+    cursor:pointer;
+    color:#000000;
+    font-family:Arial;
+    font-size:17px;
+    font-weight:bold;
+    padding:6px 24px;
+    text-decoration:none;
+  }
+  .myButton:hover {
+    background:linear-gradient(to bottom, #ffffff 5%, #ffffff 100%);
+    background-color:#ffffff;
+  }
+  .myButton:active {
+    position:relative;
+    top:1px;
+  }
+  
