--- a/css_pages/style.css
+++ b/css_pages/style.css
@@ -10821,11 +10821,11 @@ textarea.form-control-lg {
 /*Modif perso*/
 
 .header-bg-lidl {
-    background-image: url('/images/lidl.png');
-    background-size: cover;
-    background-position: center;
-    padding: 5rem 0;
+  background-image: url('/images/lidl-band.jpg');
+  background-position: -60% center; 
+  padding: 5rem 0;
 }
+
 
 .header-bg-uppa {
     background-image: url('/images/uppa.png');
