--- a/css_pages/style_index.css
+++ b/css_pages/style_index.css
@@ -287,7 +287,7 @@ a {
 }
 
 .header-bg-index {
-  background-image: url('/images/index_page/header.png');
+  background-image: url('../images/index_page/header.png');
   background-size: cover;
   background-position: center;
   padding: 5rem 0;
